# WrenLift

./: .gitignore  Cargo.toml  LICENSE  QUIRKS.md  README.md  install.sh  main.rs
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: ISSUES.md  binary_trees.wren  fib.wren  method_call.wren  nbody.wren  run.sh  test_nested2.wren  test_nested_jit.wren
bench/lang/: binary_trees.lua  binary_trees.py  binary_trees.rb  fib.lua  fib.py  fib.rb  method_call.lua  method_call.py  method_call.rb
bench/site/: index.html
docs/: architecture.md  cli-reference.md  osr-plan.md  runtime-fix-plan.md  tiered-runtime-status.md  verification.md
examples/: embed.c  probe_test.rs  wrenlift.h
plugins/wlift_audio/: Cargo.toml
plugins/wlift_audio/src/: lib.rs
plugins/wlift_gpu/: Cargo.toml
plugins/wlift_gpu/src/: lib.rs
plugins/wlift_gpu_web/: Cargo.toml
plugins/wlift_gpu_web/src/: lib.rs
plugins/wlift_hello/: Cargo.toml
plugins/wlift_hello/src/: lib.rs
plugins/wlift_image/: Cargo.toml
plugins/wlift_image/src/: lib.rs
plugins/wlift_physics/: Cargo.toml
plugins/wlift_physics/src/: lib.rs
plugins/wlift_sqlite/: Cargo.toml
plugins/wlift_sqlite/src/: lib.rs
plugins/wlift_window/: Cargo.toml
plugins/wlift_window/src/: lib.rs
plugins/wlift_window_web/: Cargo.toml
plugins/wlift_window_web/src/: lib.rs
reference/: wren_core.c
site/: index.html
site/benchmark/: index.html
src/: capi.rs  hatch.rs  hatch_registry.rs  hatch_runner.rs  hatch_service.rs  intern.rs  lib.rs  main.rs  mod.rs  portable_time.rs  serialize.rs
src/ast/: README.md  mod.rs
src/codegen/: README.md  aarch64.rs  cfg.rs  cranelift_backend.rs  mod.rs  native_meta.rs  regalloc.rs  runtime_fns.rs  wasm.rs  x86_64.rs
src/compiler/: compiler.rs  grammar.rs  lib.rs  mod.rs  scanner.rs  utils.rs  value.rs  wren_compiler.rs  wren_parser.rs
src/diagnostics/: README.md  mod.rs
src/mir/: README.md  builder.rs  bytecode.rs  interp.rs  mod.rs  ssa.rs  threaded.rs
src/mir/opt/: constfold.rs  cse.rs  dce.rs  devirt.rs  escape.rs  inline.rs  licm.rs  mod.rs  purity.rs  range_loop.rs  sra.rs  tree_shake.rs
src/parse/: README.md  cfg.rs  lexer.rs  mod.rs  parser.rs
src/runtime/: README.md  engine.rs  fiber.rs  foreign.rs  foreign_wasm.rs  gc.rs  gc_arena.rs  gc_marksweep.rs  gc_trait.rs  mod.rs  object.rs  object_layout.rs  tier.rs  tier_wasm.rs  value.rs  vm.rs  vm_interp.rs
src/runtime/core/: bool.rs  cls.rs  crypto.rs  fiber.rs  fn_obj.rs  fs.rs  hash.rs  hatch.rs  http.rs  io.rs  list.rs  map.rs  meta.rs  mod.rs  null.rs  num.rs  obj.rs  os.rs  proc.rs  random.rs  range.rs  regex.rs  sequence.rs  socket.rs  string.rs  system.rs  time.rs  toml.rs  typed_array.rs  uuid.rs  zip.rs
src/sema/: README.md  mod.rs  protocol.rs  resolve.rs  types.rs
tests/: e2e.rs  hatch_runner.rs  wasm_smoke.rs
tools/: bake-fruit-ninja.mjs  bake-fruit-slicer.mjs
wasm/: Cargo.toml  README.md  serve.js
wasm/src/: browser.rs  dom.rs  lib.rs  storage.rs  tier_up.rs
wasm/web/: examples.json  gpu-bridge.js  hatch-assets.hatch  hatch-gpu-web.hatch  hatch-gpu.hatch  hatch-hello.hatch  hatch-window.hatch  index.html  serve.js  test-assets.html  test-fetch-bytes.html  test-game-local.html  test-gpu-byo-canvas.html  test-gpu-sprite.html  test-gpu-texture.html  test-gpu.html  test-plugin.html  wlift.js  wlift_wasm.js  wlift_wasm_bg.wasm  worker.js
wasm/web/assets-test/: assets-manifest.json  config.json
wasm/web/assets-test/shaders/: solid.wgsl
wasm/web/assets/fruit-ninja/: atlas.json  atlas.rgba8
