[package]
name = "wren_lift"
version = "0.1.0"
authors = ["Damilare Akinlaja <damilare@zenturi.co>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "wlift"
path = "src/main.rs"

[features]
default = ["cranelift"]
cranelift = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.5"
logos = "0.15"
dynasmrt = "2"
dynasm = "2"
wasm-encoder = "0.245"
smallvec = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
toml = "0.8"
toml_edit = "0.22"
zstd = "0.13"
libloading = "0.8"
tempfile = "3"
cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
cranelift-jit = { version = "0.130", optional = true }
cranelift-native = { version = "0.130", optional = true }

[dev-dependencies]
capstone = "0.12"
wasmtime = "31"
wasmprinter = "0.226"
wasmparser = "0.226"
