[workspace]
members = [".", "plugins/wlift_sqlite"]
resolver = "2"

[package]
name = "wren_lift"
version = "0.1.0"
authors = ["Damilare Akinlaja <damilare@zenturi.co>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "wlift"
path = "src/main.rs"

[features]
default = ["cranelift"]
cranelift = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.5"
logos = "0.15"
dynasmrt = "2"
dynasm = "2"
wasm-encoder = "0.245"
smallvec = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
toml = "0.8"
toml_edit = "0.22"
zstd = "0.13"
libloading = "0.8"
tempfile = "3"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4", "v5", "v7"] }
aes-gcm = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core", "std"] }
rand_core = { version = "0.6", features = ["std"] }
argon2 = { version = "0.5", features = ["std", "password-hash"] }
password-hash = { version = "0.5", features = ["std", "alloc"] }
zip = { version = "2", default-features = false, features = ["deflate", "zstd"] }
ureq = { version = "2", features = ["tls"] }
cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
cranelift-jit = { version = "0.130", optional = true }
cranelift-native = { version = "0.130", optional = true }
# Tier-up / promotion broker. Pinned to 0.3 — version 0.3 brought in
# the OsrEntry / swap_compiled_with_osr APIs that `src/runtime/tier.rs`
# relies on for OSR-aware installs.
beadie = "0.3"

[dev-dependencies]
capstone = "0.12"
wasmtime = "31"
wasmprinter = "0.226"
wasmparser = "0.226"
