[package]
name = "wlift_wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen entry shim for the WrenLift runtime — compile + run Wren code in browser / wasi hosts."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The runtime itself, with host-only deps gated out. We keep the
# `wasm-encoder` dep enabled so a future track-2 wasm-AOT pipeline
# can still emit modules from inside this build.
wren_lift = { path = "..", default-features = false }
wasm-bindgen = "0.2"
# Async wasm-bindgen exports — `pub async fn` becomes a JS
# Promise-returning function. The scheduler in `lib.rs::run`
# uses this to yield to the JS event loop between draining
# parked Wren fibers, so async bridges (Browser.fetch /
# setTimeout / WebSocket) actually settle their futures.
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Plugins statically linked into the wasm runtime. Each one
# exposes a `register_static_symbols()` that publishes its
# `#[no_mangle] wlift_*` exports to the foreign-method registry
# on `wasm32-*` targets. Adding a plugin here is the wasm
# equivalent of dropping `lib<crate>.so` into a host package's
# `libs/` directory.
wlift_image = { path = "../plugins/wlift_image", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Browser-side panic visibility: any unhandled panic surfaces as a
# `console.error` with a stack trace instead of `unreachable
# executed`. Cheap, ergonomic, no runtime cost in non-panicking
# paths.
console_error_panic_hook = "0.1"
# A `js_sys::Date::now()`-backed monotonic clock that swaps in for
# `std::time::Instant::now()` (which panics on wasm32-unknown-
# unknown). Pulled in transitively by `wren_lift`'s wasm cfg too —
# explicit here so the rlib link order stays sane.
web-time = "1"
