[package]
name = "wlift_physics"
version = "0.1.0"
edition = "2021"
description = "Rapier-backed physics for the WrenLift game framework. One cdylib bundles rapier2d + rapier3d so @hatch:physics can expose World2D and World3D from a single import."

[lib]
crate-type = ["cdylib"]

[dependencies]
# `features = ["host"]` matches the binary's view of `wren_lift`,
# so host-gated fields in `VM` / `NativeContext` line up. Without
# it the plugin's `&mut VM` decode is offset → silent SIGSEGV on
# the first foreign-method dispatch. `default-features = false`
# still keeps `cranelift` out — the JIT bloat doesn't belong here.
wren_lift = { path = "../..", default-features = false, features = ["host"] }
# Pinned to 0.32 — the API has changed across versions; if we
# bump these, audit the descriptor decoders below.
rapier2d = "0.32"
rapier3d = "0.32"
