[package]
name = "wlift_sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite plugin for the WrenLift runtime — distributed as a dylib bundled into @hatch:sqlite."

[lib]
crate-type = ["cdylib"]

[dependencies]
# Skip cranelift: the plugin doesn't emit JIT code, it just uses
# the Value / VM / NativeContext types. Pulling in cranelift-jit
# bloats the dylib by ~10 MB and drags cranelift-native into
# cross-compile paths where it fails to detect the target CPU
# (notably linux-arm64 under `cross`).
wren_lift = { path = "../..", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
