[package]
name = "wlift_sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite plugin for the WrenLift runtime — distributed as a dylib bundled into @hatch:sqlite."

[lib]
crate-type = ["cdylib"]

[dependencies]
# `features = ["host"]` matches the binary's view of `wren_lift`,
# so host-gated fields in `VM` / `NativeContext` line up. Without
# it the plugin's `&mut VM` decode is offset → silent SIGSEGV on
# the first foreign-method dispatch. We still skip `cranelift`:
# the plugin doesn't emit JIT code, and pulling cranelift-jit in
# bloats the dylib by ~10 MB while dragging cranelift-native into
# cross-compile paths where it fails to detect the target CPU
# (notably linux-arm64 under `cross`).
wren_lift = { path = "../..", default-features = false, features = ["host"] }
rusqlite = { version = "0.31", features = ["bundled"] }
